[tool.poetry]
name = "Kumiko-GWS-API"
version = "0.1.0"
description = "Kumiko's Genshin Wish Sim API - Obtains assets for Kumiko's GWS"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
orjson = "^3.7.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
